integrated landing page

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,9 +8,8 @@
 
 {% block main_content %}
 
-    <body>
     <!-- send user instance as object, populate the page with it -->
-    <div class="container-fluid banner">
+    <header class="container-fluid">
         <div class="row">
             <div class="col">
                 <h2>Welcome to Dog-Ear</h2>
@@ -31,46 +30,46 @@
                 </a>
             </div>
         </div>
-    </div>
 
-{#    <div id="myPopup" class="popup">#}
-{#        <div class="popup-content">#}
-{#            <div class="container">#}
-{#                <div class="row">#}
-{#                    <div class="col">#}
-{#                        <img id="icon" src="{% static 'images/dogear.jpg' %}"/>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="row">#}
-{#                    <div class="col">#}
-{#                        <label><b>Username</b></label>#}
-{#                        <input type="text" placeholder="Enter Username" name="user" id="user">#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="row">#}
-{#                    <div class="col">#}
-{#                        <label><b>Password</b></label>#}
-{#                        <input type="password" placeholder="Enter Password" name="pwd" id="pwd">#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="row">#}
-{#                    <div class="col">#}
-{#                        <button id="login" value="login" class="btn-sm btn-dark">Login</button>#}
-{#                        <a href="create_account.html">#}
-{#                            <button id="register" class="btn-sm btn-dark">Register here.</button>#}
-{#                        </a>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="row">#}
-{#                    <div class="col">#}
-{#                        <button id="forgot" class="btn-sm btn-dark">Forgot username or password?</button>#}
-{#                        <div class="alert alert-success" role="alert" style="display: none;"></div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
+    </header>
 
-    </body>
+    {#    <div id="myPopup" class="popup">#}
+    {#        <div class="popup-content">#}
+    {#            <div class="container">#}
+    {#                <div class="row">#}
+    {#                    <div class="col">#}
+    {#                        <img id="icon" src="{% static 'images/dogear.jpg' %}"/>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#                <div class="row">#}
+    {#                    <div class="col">#}
+    {#                        <label><b>Username</b></label>#}
+    {#                        <input type="text" placeholder="Enter Username" name="user" id="user">#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#                <div class="row">#}
+    {#                    <div class="col">#}
+    {#                        <label><b>Password</b></label>#}
+    {#                        <input type="password" placeholder="Enter Password" name="pwd" id="pwd">#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#                <div class="row">#}
+    {#                    <div class="col">#}
+    {#                        <button id="login" value="login" class="btn-sm btn-dark">Login</button>#}
+    {#                        <a href="create_account.html">#}
+    {#                            <button id="register" class="btn-sm btn-dark">Register here.</button>#}
+    {#                        </a>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#                <div class="row">#}
+    {#                    <div class="col">#}
+    {#                        <button id="forgot" class="btn-sm btn-dark">Forgot username or password?</button>#}
+    {#                        <div class="alert alert-success" role="alert" style="display: none;"></div>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#    </div>#}
+
 
 {% endblock main_content %}
