--- a/static/css/landing-main.css
+++ b/static/css/landing-main.css
@@ -1,53 +1,39 @@
 body {
-	font-family: bannerFont;
+    overflow-y: hidden;
 }
 
-/* font for the banner */
-@font-face {
-    font-family: bannerFont;
-    src: url("../fonts/GlacialIndifference-regular.otf");
-    font-weight: bold;
+header {
+    color: white;
+    font-family: GlacialIndifference-bold, sans-serif;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-image: url("../images/library_transparency.png");
+    background-attachment: fixed;
+    height: 100vh;
 }
 
-@font-face {
-    font-family: bannerFontbold;
-    src: url("../fonts/GlacialIndifference-bold.otf");
-    font-weight: bold;
-}
-
-/* end fonts */
-
-.banner {
-	color: white;
-	font-family: bannerFontbold;
-	background: url("../images/library.jpg");
-	background-size: cover;
-	background-attachment: fixed;
-	background-position: bottom center;
-	background-repeat: no-repeat;
-	height: 780px;
-}
-
-.banner h2 {
-	margin-top: 20%;
-	text-align: center;
-	font-size: 72px;
+header h2 {
+    margin-top: 20%;
+    text-align: center;
+    font-size: 72px;
+    /*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+    /*text-shadow: 2px 2px black;*/
 }
 
 .login {
-	margin-top: 50px;
-	text-align: center;
+    margin-top: 50px;
+    text-align: center;
 }
 
 #login {
-	margin-bottom: 10px;
-	margin-top: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
-
 
 .popup {
     display: none;
-    position: fixed; 
+    position: fixed;
     z-index: 1;
     padding-top: 75px;
     left: 0;
@@ -55,17 +41,17 @@ body {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
     color: white;
-    font-family: bannerFontbold;
+    font-family: GlacialIndifference-bold, sans-serif;
 }
 
 /* Pop-up Content */
 .popup-content {
-	border-radius: 5px;
+    border-radius: 5px;
     margin: auto;
-	margin-top: 50px;
+    margin-top: 50px;
     padding: 20px;
     border: 1px solid #888;
     width: 300px;
@@ -73,15 +59,14 @@ body {
 }
 
 .popup-content .container .row {
-	text-align: center;
+    text-align: center;
 }
 
 #icon {
-	width: 200px;
-	height: 200px;
+    width: 200px;
+    height: 200px;
 }
 
-
 label {
-	margin-top: 10px;
+    margin-top: 10px;
 }
