--- a/static/css/create-acct-main.css
+++ b/static/css/create-acct-main.css
@@ -1,103 +1,117 @@
 body {
-	font-family: bannerFont;
+    font-family: GlacialIndifference-regular, sans-serif;
 }
 
 .banner {
-	color: white;
-	font-family: bannerFontbold;
-	background-color: #545D68;
-	background-size: cover;
-	height: 200px;
-	width:100%;
-	display: inline-block;
-	margin-left: 15px;
+    color: white;
+    font-family: GlacialIndifference-bold, sans-serif;
+    background-color: #545D68;
+    background-size: cover;
+    height: 200px;
+    width: 100%;
+    display: inline-block;
+    margin-left: 15px;
 }
 
 #banner_img {
-	height: 180px;
-	width: 180px;
-	margin-left: 10px;
-	margin-top: 10px;
+    height: 180px;
+    width: 180px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .banner h3 {
-	font-family: bannerFontbold;
-	margin-top: 50px;
-}
-
-/* font for the banner */
-@font-face {
-    font-family: bannerFont;
-    src: url("../fonts/GlacialIndifference-regular.otf");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: bannerFontbold;
-    src: url("../fonts/GlacialIndifference-bold.otf");
-    font-weight: bold;
+    font-family: GlacialIndifference-bold, sans-serif;
+    margin-top: 50px;
 }
 
 /* end fonts */
-
-.list-group {
-	margin-top: 15px;
-	width: 100%;
+:root {
+  --input-padding-x: .75rem;
+  --input-padding-y: .75rem;
 }
 
-.inputbox {
-	position: absolute;
-	right:0;
-	margin-right: 15px;
-	width: 205;
-	border-radius: 3px;
+.form-signin {
+  width: 100%;
+  max-width: 420px;
+  padding: 15px;
+  margin: auto;
 }
 
-
-#Day {
-	width: 50px;
-	margin-left: 5px;
-	position: absolute;
-	right: 170;
-	border-radius: 3px;
+.form-label-group {
+  position: relative;
+  margin-bottom: 1rem;
 }
 
-#Month {
-	width: 50px;
-	margin-left: 5px;
-	position: absolute;
-	right: 102.5;
-	border-radius: 3px;
+.form-label-group > input,
+.form-label-group > label {
+  padding: var(--input-padding-y) var(--input-padding-x);
 }
 
-#Year {
-	position: absolute;
-	right: 0;
-	margin-right: 15px;
-	width: 70px;
-	margin-left: 5px;
-	border-radius: 3px;
-}
-.list-group {
-	width: 50%;
-}
-
-.profile_pic {
-	margin-top: 10px;
-	margin-left: 25%;
+.form-label-group > label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin-bottom: 0; /* Override default `<label>` margin */
+  line-height: 1.5;
+  color: #495057;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  transition: all .1s ease-in-out;
 }
 
-#profile_img {
-	height: 320px;
-	width: 240px;
+.form-label-group input::-webkit-input-placeholder {
+  color: transparent;
 }
 
-#submit {
-	margin-top: 10px;
-	margin-left: 25%;
-	width: 20%;
+.form-label-group input:-ms-input-placeholder {
+  color: transparent;
 }
 
-#browse {
-	margin-top: 10px;
+.form-label-group input::-ms-input-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::-moz-placeholder {
+  color: transparent;
+}
+
+.form-label-group input::placeholder {
+  color: transparent;
+}
+
+.form-label-group input:not(:placeholder-shown) {
+  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-bottom: calc(var(--input-padding-y) / 3);
+}
+
+.form-label-group input:not(:placeholder-shown) ~ label {
+  padding-top: calc(var(--input-padding-y) / 3);
+  padding-bottom: calc(var(--input-padding-y) / 3);
+  font-size: 12px;
+  color: #777;
+}
+
+/* Fallback for Edge
+-------------------------------------------------- */
+@supports (-ms-ime-align: auto) {
+  .form-label-group > label {
+    display: none;
+  }
+  .form-label-group input::-ms-input-placeholder {
+    color: #777;
+  }
+}
+
+/* Fallback for IE
+-------------------------------------------------- */
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .form-label-group > label {
+    display: none;
+  }
+  .form-label-group input:-ms-input-placeholder {
+    color: #777;
+  }
 }
