--- a/static/css/Home-main.css
+++ b/static/css/Home-main.css
@@ -1,120 +1,123 @@
 div {
-	font-family: bannerFontbold;
+    font-family: GlacialIndifference-bold, sans-serif;
 }
 
 .banner {
-	background-image: url('../images/written.jpg');
-	background-size: cover;
-	background-position: bottom center;
-	background-repeat: no-repeat;
-	height: 300px;
+    background-image: url('../images/written.jpg');
+    background-size: cover;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    height: 300px;
 }
 
-
 .banner img {
-	height: 200px;
-	width: 200px;
+    height: 200px;
+    width: 200px;
 }
 
 .banner #profile-btn {
-	margin-left: 92.5%;
-	margin-top: 10px;
-}
-
-@font-face {
-    font-family: bannerFont;
-    src: url("../fonts/GlacialIndifference-regular.otf");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: bannerFontbold;
-    src: url("../fonts/GlacialIndifference-bold.otf");
-    font-weight: bold;
+    margin-left: 92.5%;
+    margin-top: 10px;
 }
 
 /* carousel style */
 .item {
-	display: none;
+    display: none;
 }
 
 .control-box-left {
-	display:inline-block;
-	
+    display: inline-block;
+
 }
 
 .control-box-right {
-	display:inline-block;
-	margin-left: 7.5%;
+    display: inline-block;
+    margin-left: 7.5%;
 }
 
-.book_imgs{
-	display: inline-block;
+.book_imgs {
+    display: inline-block;
 }
 
 .span3 {
-	display: inline-block;
+    display: inline-block;
 }
 
 .book_img {
-	max-width:100%;
-	margin: 12%;
+    max-width: 100%;
+    margin: 12%;
 }
 
 .book_elem {
-	width: 200px;
-	height: 200px;
+    width: 200px;
+    height: 200px;
 }
 
 .book_elem_port {
-	height: 240px;
-	width: 180px;
+    height: 240px;
+    width: 180px;
 }
 
 .center {
-	text-align: center;
+    text-align: center;
 }
 
 a {
-	-webkit-transition: all 150ms ease;
-	-moz-transition: all 150ms ease;
-	-ms-transition: all 150ms ease;
-	-o-transition: all 150ms ease;
-	transition: all 150ms ease; 
+    -webkit-transition: all 150ms ease;
+    -moz-transition: all 150ms ease;
+    -ms-transition: all 150ms ease;
+    -o-transition: all 150ms ease;
+    transition: all 150ms ease;
 }
 
 a:hover {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; /* IE 8 */
-	filter: alpha(opacity=50); /* IE7 */
-	opacity: 0.6;
-	text-decoration: none;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; /* IE 8 */
+    filter: alpha(opacity=50); /* IE7 */
+    opacity: 0.6;
+    text-decoration: none;
 }
 
 .carousel-container {
-	background: #FFFFFF;
+    background: #FFFFFF;
     margin: 20px;
 }
 
-::selection { background: #ff5e99; color: #FFFFFF; text-shadow: 0; }
-::-moz-selection { background: #ff5e99; color: #FFFFFF; }
+::selection {
+    background: #ff5e99;
+    color: #FFFFFF;
+    text-shadow: 0;
+}
 
-a, a:focus, a:active, a:hover, object, embed { outline: none; }
-:-moz-any-link:focus { outline: none; }
-input::-moz-focus-inner { border: 0; }
+::-moz-selection {
+    background: #ff5e99;
+    color: #FFFFFF;
+}
+
+a, a:focus, a:active, a:hover, object, embed {
+    outline: none;
+}
+
+:-moz-any-link:focus {
+    outline: none;
+}
+
+input::-moz-focus-inner {
+    border: 0;
+}
 
 .about-us {
-	background-color: #545D68;
-	color: white;
-	height: 300px;
-	
+    background-color: #545D68;
+    color: white;
+    height: 300px;
+
 }
 
 .about-us h4 {
-	margin-top: 15px;
-	margin-left: 15px;
+    margin-top: 15px;
+    margin-left: 15px;
 }
 
 .about-us p {
-	margin-top: 10px;
-	margin-left: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
 }
