--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
     <title> {% block title %} Bookstore {% endblock title %}</title>
 
     <!-- Bootstrap CSS -->
-{#    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"#}
-{#          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">#}
+    {#    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"#}
+    {#          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">#}
     <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}">
 
     <!-- Font Awesome Icons CDN -->
@@ -40,7 +40,12 @@
 
 <!-- Title bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Bookstore</a>
+
+    {% if request.user.is_authenticated %}
+        <a class="navbar-brand" href="{% url 'books:home' %}">Bookstore</a>
+    {% else %}
+        <a class="navbar-brand" href="{% url 'books:landing' %}">Bookstore</a>
+    {% endif %}
 
     <!-- Collapse button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -53,41 +58,45 @@
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'books:home' %}">Home</a>
+                {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'books:home' %}">Home</a>
+                {% else %}
+                    <a class="nav-link" href="{% url 'books:landing' %}">Home</a>
+                {% endif %}
             </li>
 
-            <!-- Product Dropdown -->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="prodDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Products
-                </a>
-
-                <!-- Will need logic and content to grab approrpiate items -->
-                <div class="dropdown-menu" aria-labelledby="prodDropdown">
-                    <a class="dropdown-item" href="#">Product Type 1</a>
-                    <!-- Will link to a search query @ /q?s='...' -->
-                    <a class="dropdown-item" href="#">Product Type 2</a>
-                    <!-- Will link to a search query @ /q?s='...' -->
-                    <a class="dropdown-item" href="#">Product Type 3</a>
-                    <!-- Will link to a search query @ /q?s='...' -->
-                    <a class="dropdown-item" href="#">Product Type 4</a>
-                    <!-- Will link to a search query @ /q?s='...' -->
-                    <a class="dropdown-item" href="#">Product Type 5</a>
-                    <!-- Will link to a search query @ /q?s='...' -->
-                    <a class="dropdown-item" href="#">Product Type 6</a>
-                    <!-- Will link to a search query @ /q?s='...' -->
-                </div>
-            </li>
+            {#            <!-- Product Dropdown -->#}
+            {#            <li class="nav-item dropdown">#}
+            {#                <a class="nav-link dropdown-toggle" href="#" id="prodDropdown" role="button" data-toggle="dropdown"#}
+            {#                   aria-haspopup="true" aria-expanded="false">#}
+            {#                    Products#}
+            {#                </a>#}
+            {##}
+            {#                <!-- Will need logic and content to grab approrpiate items -->#}
+            {#                <div class="dropdown-menu" aria-labelledby="prodDropdown">#}
+            {#                    <a class="dropdown-item" href="#">Product Type 1</a>#}
+            {#                    <!-- Will link to a search query @ /q?s='...' -->#}
+            {#                    <a class="dropdown-item" href="#">Product Type 2</a>#}
+            {#                    <!-- Will link to a search query @ /q?s='...' -->#}
+            {#                    <a class="dropdown-item" href="#">Product Type 3</a>#}
+            {#                    <!-- Will link to a search query @ /q?s='...' -->#}
+            {#                    <a class="dropdown-item" href="#">Product Type 4</a>#}
+            {#                    <!-- Will link to a search query @ /q?s='...' -->#}
+            {#                    <a class="dropdown-item" href="#">Product Type 5</a>#}
+            {#                    <!-- Will link to a search query @ /q?s='...' -->#}
+            {#                    <a class="dropdown-item" href="#">Product Type 6</a>#}
+            {#                    <!-- Will link to a search query @ /q?s='...' -->#}
+            {#                </div>#}
+            {#            </li>#}
 
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a> <!-- Will link to /about -->
+                <a class="nav-link" href="/about">About</a> <!-- Will link to /about -->
             </li>
 
         </ul>
 
         <!-- Search Bar -->
-        <form method="GET" class="form-inline my-2 my-lg-0">
+        <form method="GET" class="form-inline my-2 my-lg-0" target="#"> {# TODO #}
             <input class="form-control mr-sm-2" type="search" placeholder="Search..."
                    aria-label="searchBar">
             {#            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">#}
@@ -127,14 +136,20 @@
                     <i class="nav-item fas fa-user fa-lg"></i>
                 </a>
 
-                <!-- Will need logic to test whether a user is logged in -->
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="mem">
-                    <a class="dropdown-item" href="#">User Profile</a> <!-- Will link to a search query @ /q?s='...' -->
-                    <a class="dropdown-item" href="#">Purchases</a> <!-- Will link to a search query @ /q?s='...' -->
-                    <a class="dropdown-item" href="#">Settings</a> <!-- Will link to a search query @ /q?s='...' -->
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Log out</a> <!-- Will link to a search query @ /q?s='...' -->
-                </div>
+                {% if requests.user.is_authenticated %}
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="mem">
+                        <a class="dropdown-item" href="#">Profile</a> {# TODO #}
+                        <a class="dropdown-item" href="#">Purchases</a>
+                        <a class="dropdown-item" href="#">Settings</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'members:logout' %}">Log out</a>
+                    </div>
+                {% else %}
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="mem">
+                        <a class="dropdown-item" href="{% url 'members:register' %}">Register</a>
+                        <a class="dropdown-item" href="{% url 'members:login' %}">Log in</a>
+                    </div>
+                {% endif %}
 
             </div>
         </div>
