--- a/static/css/book-detail-main.css
+++ b/static/css/book-detail-main.css
@@ -1,5 +1,5 @@
 body {
-	font-family: bannerFont;
+    font-family: bannerFont;
 }
 
 /* font for the banner */
@@ -18,119 +18,119 @@ body {
 /* end fonts */
 
 .banner {
-	color: white;
-	font-family: bannerFontbold;
-	background: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url("../images/bookshelf.jpg");
-	background-size: cover;
-	background-position: bottom center;
-	background-repeat: no-repeat;
-	height: 300px;
+    color: white;
+    font-family: bannerFontbold;
+    background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url("../images/bookshelf.jpg");
+    background-size: cover;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    height: 300px;
 }
 
 #banner_img {
-	height: 200px;
-	width: 200px;
-	margin-left:40%;
-	margin-top: 30px;
+    height: 200px;
+    width: 200px;
+    margin-left: 40%;
+    margin-top: 30px;
 }
 
 #edit {
-	float: right;
-	margin: 15px;
-	display: none;
+    float: right;
+    margin: 15px;
+    display: none;
 }
 
-
 .book_content {
-	height: 500px;
+    height: 500px;
 }
 
 #thumbnail {
-	display: inline-block;
-	width: 200px;
+    display: inline-block;
+    width: 200px;
 }
 
 .book_content img {
-	height: 200px;
-	width: 200px;
-	margin: 15px;
+    height: 200px;
+    width: 200px;
+    margin: 15px;
 }
 
 #primary_data {
-	margin-left: 50px;
+    margin-left: 50px;
 }
+
 .col-md-9 ul {
-	display: inline-block;
-	margin-top: 15px;
-	margin-left: 10px;
+    display: inline-block;
+    margin-top: 15px;
+    margin-left: 10px;
 }
 
 .col-md-9 ul li {
-	list-style: none;
-	margin-top: 5px;
+    list-style: none;
+    margin-top: 5px;
 }
 
 .details {
-	margin-left: 35px;
+    margin-left: 35px;
 }
 
 #secondary li {
-	display: inline-block;
-	list-style: none;
-	margin-right: 75px;
+    display: inline-block;
+    list-style: none;
+    margin-right: 75px;
 }
 
 .sidebar {
-	border: solid 5px;
-	text-align: center;
-	margin-top: 10px;
-	padding-right: 10px;
-	border-radius: 15px;
-	border-color: #DBDBDB;
-	background-color: white;
+    border: solid 5px;
+    text-align: center;
+    margin-top: 10px;
+    padding-right: 10px;
+    border-radius: 15px;
+    border-color: #DBDBDB;
+    background-color: white;
 }
 
 .sidebar p {
-	margin-top: 10px;
+    margin-top: 10px;
 }
 
 .sidebar button {
-	margin-top: 10px;
+    margin-top: 10px;
 }
 
 #reserve {
-	margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 .foot {
-	margin-top: 15px;
-	height: 60px;
-	background: linear-gradient(rgba(205,205,205,0.7), rgba(205,205,205,0.7));
-	position: absolute;
-	margin-right: -30px;
-	margin-left: -30px;
-	bottom: 0;
-	font-family: bannerFontbold;
-	overflow: hidden;
-	
+    margin-top: 15px;
+    height: 60px;
+    background: linear-gradient(rgba(205, 205, 205, 0.7), rgba(205, 205, 205, 0.7));
+    position: absolute;
+    margin-right: -30px;
+    margin-left: -30px;
+    bottom: 0;
+    font-family: bannerFontbold;
+    overflow: hidden;
+
 }
 
 .nav-list {
-	display: inline-block;
-	right:0;
-	bottom: -17px;
-	position: absolute;
-	margin-right: 20px;
+    display: inline-block;
+    right: 0;
+    bottom: -17px;
+    position: absolute;
+    margin-right: 20px;
 }
 
 .nav-list-item {
-	display: inline-block;
-	list-style: none;
-	font-size: 16px;
-	margin-bottom: 20px;
+    display: inline-block;
+    list-style: none;
+    font-size: 16px;
+    margin-bottom: 20px;
 }
 
 .nav-list-item:hover {
-	opacity: .6;
-	color: #8FB4C4;
+    opacity: .6;
+    color: #8FB4C4;
 }
