--- a/static/css/cart-main.css
+++ b/static/css/cart-main.css
@@ -1,5 +1,5 @@
 body {
-	font-family: bannerFont;
+    font-family: bannerFont;
 }
 
 /* font for the banner */
@@ -18,53 +18,53 @@ body {
 /* end fonts */
 
 .banner {
-	color: white;
-	font-family: bannerFontbold;
-	background: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url("../images/bookshelf.jpg");
-	background-size: cover;
-	background-position: bottom center;
-	background-repeat: no-repeat;
-	height: 300px;
+    color: white;
+    font-family: bannerFontbold;
+    background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url("../images/bookshelf.jpg");
+    background-size: cover;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    height: 300px;
 }
 
 #banner_img {
-	height: 200px;
-	width: 200px;
-	margin-left:40%;
-	margin-top: 30px;
+    height: 200px;
+    width: 200px;
+    margin-left: 40%;
+    margin-top: 30px;
 }
 
 .main {
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 #shop {
-	display: block;
-	text-align: center;
-	margin-left: 31%;
+    display: block;
+    text-align: center;
+    margin-left: 31%;
 }
 
 #checkout {
-	display: block;
-	margin-left: 40%;
-	text-align: center;
+    display: block;
+    margin-left: 40%;
+    text-align: center;
 }
 
 .sidebar {
-	text-align: center;
-	border-left: 3px solid;
-	border-color: #DBDBDB;
+    text-align: center;
+    border-left: 3px solid;
+    border-color: #DBDBDB;
 }
 
 .amt {
-	float: right;
-	font-family: bannerFontbold;
+    float: right;
+    font-family: bannerFontbold;
 }
 
 .tot {
-	text-align: right;
+    text-align: right;
 }
 
 .promo-contr {
-	margin-top: 25px;
+    margin-top: 25px;
 }
