--- a/templates/landing.html
+++ b/templates/landing.html
@@ -20,8 +20,8 @@
                 <button type="button" id="doLogin" class="btn-lg btn-light">Login</button>
             </div>
             <div class="col-sm-6">
-                <a href="create_account.html">
-                    <button type="button" class="btn-lg btn-light">Create Account</button>
+                <a href="register.html">
+                    <button type="button" class="btn-lg btn-light">Register</button>
                 </a>
             </div>
             <div class="col-md-12">
@@ -56,7 +56,7 @@
     {#                <div class="row">#}
     {#                    <div class="col">#}
     {#                        <button id="login" value="login" class="btn-sm btn-dark">Login</button>#}
-    {#                        <a href="create_account.html">#}
+    {#                        <a href="register.html">#}
     {#                            <button id="register" class="btn-sm btn-dark">Register here.</button>#}
     {#                        </a>#}
     {#                    </div>#}
