--- a/templates/login_confirmation.html
+++ b/templates/login_confirmation.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="alert alert-success" role="alert">
-                <h4 class="alert-heading">Login Sucessfull!</h4>
+                <h4 class="alert-heading">Login Successful!</h4>
                 <p>You will be redirected back to our website. </p>
                 <hr>
                 <p class="mb-0">If you are not redirected immediately, please follow this link <a href="home_page.html">Dog-Ear
