removed '-main' from css filenames

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -4,7 +4,7 @@
 {% load home_page_tags %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/Home-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
 {% endblock per_page_css %}
 
 {% block main_content %}
