--- a/templates/admin_view.html
+++ b/templates/admin_view.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/terminal-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/terminal.css' %}">
 {% endblock %}
 
 {% block main_content %}
