--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/book-detail-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/book-detail.css' %}">
 {% endblock per_page_css %}
 
 {% block main_content %}
