--- a/templates/book_sales.html
+++ b/templates/book_sales.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/Eod-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/eod.css' %}">
 {% endblock %}
 
 {% block main_content %}
