--- a/templates/cart.html
+++ b/templates/cart.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/cart-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/cart.css' %}">
 {% endblock %}
 
 
