--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/checkout-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
 {% endblock per_page_css %}
 
 {% block main_content %}
