--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/inventory-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/inventory.css' %}">
 {% endblock per_page_css %}
 
 {% block main_content %}
