--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/landing-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/landing.css' %}">
 {% endblock per_page_css %}
 
 {% block main_content %}
