--- a/templates/order_confirmation.html
+++ b/templates/order_confirmation.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/confirmation-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/confirmation.css' %}">
 {% endblock per_page_css %}
 
 {% block main_content %}
