--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% load form_tags %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/register.main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
 {% endblock per_page_css %}
 
 {% block main_content %}
