--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/user-profile-main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
 {% endblock %}
 
 {% block main_content %}
