--- a/static/css/book-detail.css
+++ b/static/css/book-detail.css
@@ -1,25 +1,5 @@
-body {
-    font-family: bannerFont;
-}
-
-/* font for the banner */
-@font-face {
-    font-family: bannerFont;
-    src: url("../fonts/GlacialIndifference-regular.otf");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: bannerFontbold;
-    src: url("../fonts/GlacialIndifference-bold.otf");
-    font-weight: bold;
-}
-
-/* end fonts */
-
 .banner {
     color: white;
-    font-family: bannerFontbold;
     background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url("../images/bookshelf.jpg");
     background-size: cover;
     background-position: bottom center;
@@ -110,7 +90,7 @@ body {
     margin-right: -30px;
     margin-left: -30px;
     bottom: 0;
-    font-family: bannerFontbold;
+    font-family: GlacialIndifference-bold, sans-serif;
     overflow: hidden;
 
 }
