--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -1,20 +1,3 @@
-div {
-    font-family: bannerFont;
-}
-
-/* font for the banner */
-@font-face {
-    font-family: bannerFont;
-    src: url("../fonts/GlacialIndifference-regular.otf");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: bannerFontbold;
-    src: url("../fonts/GlacialIndifference-bold.otf");
-    font-weight: bold;
-}
-
 .left {
     margin-left: 90%;
     margin-bottom: 3px;
@@ -48,7 +31,7 @@ div {
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
     color: white;
-    font-family: bannerFontbold;
+    font-family: GlacialIndifference-regular, sans-serif;
 }
 
 /* Pop-up Content */
