--- a/static/css/user-profile.css
+++ b/static/css/user-profile.css
@@ -1,7 +1,3 @@
-body {
-    font-family: bannerFontbold;
-}
-
 .info_block {
     background-color: #F3F3F3;
 }
@@ -39,7 +35,7 @@ body {
     background: linear-gradient(rgba(205, 205, 205, 0.7), rgba(205, 205, 205, 0.7));
     position: fixed;
     bottom: 0;
-    font-family: bannerFontbold;
+    font-family: GlacialIndifference-bold, sans-serif;
     height: 60px;
 }
 
@@ -60,21 +56,6 @@ body {
 .nav-list-item:hover {
     opacity: .6;
 }
-
-/* font for the banner */
-@font-face {
-    font-family: bannerFont;
-    src: url("../fonts/GlacialIndifference-regular.otf");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: bannerFontbold;
-    src: url("../fonts/GlacialIndifference-bold.otf");
-    font-weight: bold;
-}
-
-/* end fonts */
 
 /* carousel style */
 .item {
