remove failed comment

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
         </ul>
 
         <!-- Search Bar -->
-        <form method="GET" class="form-inline my-2 my-lg-0" target="#"> {# TODO #} %}
+        <form method="GET" class="form-inline my-2 my-lg-0" target="#"> {# TODO #}
             <input class="form-control mr-sm-2" type="search" placeholder="Search..."
                    aria-label="searchBar">
             {#            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">#}
