--- a/templates/activate.html
+++ b/templates/activate.html
@@ -11,4 +11,11 @@
         <h1>TODO</h1>
         {{ error }}
     </div>
+
+    <!-- until TODO is done -->
+
+    <form method="post" action=''> {% csrf_token %}
+        <input type="text" class='btn btn-default' name="code"/>
+        <input type="submit" class='btn btn-default' value="Verify Account"/>
+    </form>
 {% endblock %}
