--- a/templates/base.html
+++ b/templates/base.html
@@ -99,8 +99,8 @@
         </ul>
 
         <!-- Search Bar -->
-        <form method="GET" class="form-inline my-2 my-lg-0" target="#"> {# TODO #}
-            <input class="form-control mr-sm-2" type="search" placeholder="Search..."
+        <form method="GET" class="form-inline my-2 my-lg-0" action="/book/"> {# TODO #}
+            <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search..."
                    aria-label="searchBar">
             {#            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">#}
             <button class="btn my-2 my-sm-0" type="submit">
