--- a/templates/cart.html
+++ b/templates/cart.html
@@ -10,19 +10,6 @@
 
 {% block main_content %}
     <!-- send user instance as object, populate the page with it -->
-    <p> Cart Page</p>
-    <ul>
-        {% for item in items %}
-            <li>
-                {{ item.book }}, ${% unit_price item.count item.price %}, Count: {{ item.count }},
-                Reservation: {{ item.reservation }}
-                <form method="post" action="remove/{{ item.book.slug }}/"> {% csrf_token %}
-                    <input type="submit" name="remove-item" value="Remove">
-                </form>
-            </li>
-        {% endfor %}
-    </ul>
-
     <div class="container-fluid banner">
         <div class="row">
             <div class="col">
@@ -33,29 +20,41 @@
     <div class="container-fluid main">
         <div class="row">
             <div class="col-md-8">
-                <form>
-                    <ul class="list-group">
-                        <li class="list-group-item">Item 1: <span class="amt">$X.XX</span></li>
-                        <li class="list-group-item">Item 2: <span class="amt">$X.XX</span></li>
-                        <li class="list-group-item">Item 3: <span class="amt">$X.XX</span></li>
-                        <li class="list-group-item">Item 4: <span class="amt">$X.XX</span></li>
-                        <li class="list-group-item tot">Promo: &nbsp;&nbsp;<span class="amt">$X.XX</span></li>
-                        <li class="list-group-item tot">Total: &nbsp;&nbsp;<span class="amt">$X.XX</span></li>
-                    </ul>
-
-                    <ul class="list-group promo-contr">
-                        <li class="list-group-item">Promo Code: <input type="text" class="form-control"
-                                                                       name="Promo"/><br></li>
-                        <li class="list-group-item">
-                            <button class="btn-sm btn-dark">Apply Promo</button>
+                <ul class="list-group">
+                    {% for item in items %}
+                        <li class="list-group-item">{{ item }} ({{ item.count }})
+                            <span class="amt">
+                                <span class="amt_rem">${% unit_price item.price item.count %}&nbsp;&nbsp;</span>
+                                <form class="remove_form" method="post" action="remove/{{ item.book.slug }}/"> {% csrf_token %}
+                                    <input type="submit" name="remove-item" value="X">
+                                </form>
+                            </span>
                         </li>
-                    </ul>
-                </form>
+                    {% endfor %}
+                    <li class="list-group-item tot">Total: &nbsp;&nbsp;<span class="amt">${% total_price items %}</span></li>
+                </ul>
+
+                <ul class="list-group promo-contr">
+                    <form method="post" action=""> {% csrf_token %}
+                        <li class="list-group-item">
+                            Promo Code: <input type="text" class="form-control" name="promo_code" placeholder="6-DIGIT CODE"/>
+                        </li>
+
+                        <li class="list-group-item">
+                            <input class="btn-sm btn-dark" type="submit" value="Apply Promotional">
+                        </li>
+                    </form>
+                </ul>
             </div>
             <div class="col-4 sidebar">
-                <button id="checkout" class="btn-lg btn-dark"> CheckOut</button>
-                <br>
-                <button id="shop" class="btn-lg btn-dark"> Continue Shopping</button>
+
+                <form method="post" action="checkout/"> {% csrf_token %}
+                    <span>
+                        <input id="checkout" class="btn-lg btn-dark" type="submit" name="card" value="Pay Online">
+                        <br>
+                        <input id='reserve' class="btn-lg btn-dark" type="submit" name="cash" value="Reserve at Bookstore">
+                    </span>
+                </form>
                 <hr>
 
 
@@ -75,18 +74,11 @@
                     <li class="list-group-item">{Book}</li>
                     <li class="list-group-item">{Book}</li>
                 </ul>
+
+                <hr>
+                <button id="shop" class="btn-lg btn-dark"> Continue Shopping</button>
+
             </div>
         </div>
     </div>
-
-    <form method="post" action=""> {% csrf_token %}
-        <input type="text" name="promo_code" value="{{ current_code }}">
-        <input type="submit" value="Apply Promotional">
-    </form>
-
-    <form method="post" action="checkout/"> {% csrf_token %}
-        <input type="submit" name="card" value="Pay Online">
-        <input type="submit" name="cash" value="Reserve at Bookstore">
-    </form>
-
 {% endblock main_content %}
