--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -14,8 +14,15 @@
 
     <ul>
         {% for item in items %}
-            <li>{{ item.book.vendor }}{{ item.book }}, ${% unit_price item.count item.price %},
-                Count: {{ item.count }}</li>
+            <li>
+                <ul style="list-style-type: none">
+                    <li>Vendor: {{ item.book.vendor }}</li>
+                    <li>Title: {{ item.book }}</li>
+                    <li>Price: ${% unit_price item.count item.price %}</li>
+                    <li>Number Ordered: {{ item.count }}</li>
+                    <br>
+                </ul>
+            </li>
         {% endfor %}
         <li>Total: ${% total_price items %}</li>
     </ul>
