Book default image:
+ Added a default file location to book's ImageField
+ Added urlpatterns for static and media files
+ Updated settings file for MEDIA
+ Added a default_book.png image in media/books/images
+ Addes the image url to book_detail
+ Cleaned up checkout.html slightly

--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -23,7 +23,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-4">
-                            <img class="img-responsive" src="{% static 'images/img.png' %}"/>
+                            <img class="img-responsive" src="{{ book.item_picture.url }}"/>
                         </div>
                         <div class="col-md-8">
                             <ul>
