Member default image:
+ Added a default file location to member's ImageField
+ Added a default_member.png image in media/members/images
+ Addes the image url to user_profile
+ Modified Member's delete() function to also delete the cart

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -12,14 +12,14 @@
     <div class="container-fluid">
         <div class="row info_block">
             <div class="col-md-4">
-                <img src="{% static 'images/placeholder.jpg' %}" id="thumbnail"
+                <img src="{{ member.profile_picture.url }}" id="thumbnail"
                      alt="User_Profile_image"/>
             </div>
             <div class="col-4">
                 <ul class="vitals list-group">
-                    <li class="list-group-item">Name: {Username}</li>
-                    <li class="list-group-item">Email: {Email}</li>
-                    <li class="list-group-item">DoB: {DoB}</li>
+                    <li class="list-group-item">Name: {{ member.user.first_name }} {{ member.user.last_name }}</li>
+                    <li class="list-group-item">Email: {{ member.user.email }}</li>
+                    <li class="list-group-item">DoB: {{ member.birth_date }}</li>
                     <ul>
             </div>
             <div class="col-4">
