--- a/templates/edit_account.html
+++ b/templates/edit_account.html
@@ -2,8 +2,8 @@
 {% block main_content %}
 
 <form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
-	{{user_form.as_ul}}
-   {{member_form.as_ul}}
+	{{user_form.as_p}}
+   {{member_form.as_p}}
 	<input type="submit" class='btn btn-default' value="Save Details"/>
 </form>
 
