--- a/templates/base.html
+++ b/templates/base.html
@@ -139,7 +139,7 @@
                     <i class="nav-item fas fa-user fa-lg"></i>
                 </a>
 
-                {% if requests.user.is_authenticated %}
+                {% if request.user.is_authenticated %}
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="mem">
                         <a class="dropdown-item" href="#">Profile</a> {# TODO #}
                         <a class="dropdown-item" href="#">Purchases</a>
