Added Books button to base.html's nav

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,6 +93,10 @@
             {#            </li>#}
 
             <li class="nav-item">
+                <a class="nav-link" href="/book">Books</a> <!-- Will link to /about -->
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link" href="/about">About</a> <!-- Will link to /about -->
             </li>
 
