Changes to query.css

--- a/static/css/query.css
+++ b/static/css/query.css
@@ -40,9 +40,14 @@
     width: 100px;
 }
 
-th p {
+.book_url {
+    display:block;
+    text-decoration:none;
+}
+
+th p{
     margin-top: 25px;
-    margin-left: 25px;
+    margin-left: 10px;
 }
 
 th button {
