--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load unit_price %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -123,12 +124,16 @@
 
                 <!-- Will need logic to determine number of items in user's cart. -->
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="cart">
-                    <a class="dropdown-item" href="#">Product Type 1</a>
-                    <a class="dropdown-item" href="#">Product Type 2</a>
-                    <a class="dropdown-item" href="#">Product Type 3</a>
-                    <a class="dropdown-item" href="#">Product Type 4</a>
-                    <a class="dropdown-item" href="#">Product Type 5</a>
-                    <a class="dropdown-item" href="#">Product Type 6</a>
+                    {% if request.user.is_authenticated %}
+                        <ul>
+                            {% for item in request.user.member.cart.items.all %}
+                                <li><a class="dropdown-item" href="{{ item.book.get_absolute_url }}">{{ item }} by {{ item.book.author }} ({{ item.count }}) - ${% unit_price item.price item.count %}</a></li>
+                            {% endfor %}
+                            <a class="dropdown-item" href="{% url "cart:cart" %}"><button>Go to Cart</button></a>
+                        </ul>
+                    {% else %}
+                        <a class="dropdown-item" href="{% url "members:login" %}">Please log in to use Cart</a>
+                    {% endif %}
                 </div>
             </div>
 
