book_detail.html changes
+ Added message for failure or success for cart adding (needs formatting)
+ Added a dropdown counter from 1-9 for Add to Cart
+ Added the other_books items

--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -9,6 +9,16 @@
 {% block main_content %}
 
     <!-- send user instance as object, populate the page with it -->
+    {% if messages %}
+	<div class='messages'>
+		<ul class="messages">
+			{% for message in messages %}
+				<li {% if message.tags %} class="{{message.tags}}" {% endif %}> {{ message }} </li>
+			{% endfor %}
+		</ul>
+	</div>
+{% endif %}
+
     <div class="container-fluid banner">
         <div class="row">
             <div class="col">
@@ -49,16 +59,21 @@
 
                 <form method="post"> {% csrf_token %}
                     <input class="btn-lg btn-dark" type="submit" name="cart" value="Add to Cart">
-                    <input type="text" name="count" value="1">
+                        <select name="count">
+                            {% for i in "123456789"|make_list %}
+                                <option>{{ i }}</option>
+                            {% endfor %}
+                        </select>
                 </form>
 
-                <p>Others by Author:</p>
-                <ul id="Others">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                {% if other_books %}
+                    <p>Others by Author:</p>
+                    <ul id="Others">
+                        {% for other_book in other_books %}
+                            <li>{{ other_book }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             </div>
         </div>
     </div>
