Added a Delete Account button to redirect to members:delete

--- a/templates/edit_account.html
+++ b/templates/edit_account.html
@@ -7,4 +7,6 @@
 	<input type="submit" class='btn btn-default' value="Save Details"/>
 </form>
 
+<a href="{% url 'members:delete' %}"><button class='btn btn-default'>Delete Account</button></a>
+
 {% endblock main_content %}
