home_page.html changes
+ Removed My Profile button
+ Broke the main image...need front end monkey to fix

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -11,11 +11,8 @@
 
     <div class="container-fluid banner">
         <div class="row">
-            <div class="col-md-12">
-                <button class="btn-sm btn-dark" id="profile-btn">My Profile</button>
-            </div>
             <div class="col-md-12 center">
-                <img src="{% static 'images/Dogear.jpg' %}"/>
+                <img id="banner-img" src="{% static 'images/Dogear.jpg' %}"/>
             </div>
         </div>
     </div>
